# The-Foundry

./: .gitignore  AGENTS.md  CODEX_SUBMODULE.md  TASK.md  USAGE.md  acceptance.md  bootstrap_rocm_venv.sh  guardrails.md  hf_local_llm_catalog_100gb.xlsx  model_list.csv  prd.md  progress.md  pyproject.toml  requirements.txt  supervisor_manual.md
.githooks/: pre-push
llm_gallery/: __init__.py  cli.py  config.py  profiling.py  runtime.py  sanity.py  web_rag.py
llm_gallery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
next_projects/: README.md  bootstrap_checklist.md  codex_reading_guide.md  hardware_and_live_systems.md  review_and_integration.md  subagent_prompt_templates.md  supervisory_method.md  verification_ladder.md
next_projects/project_seed/: AGENTS.template.md  TASK.template.md  acceptance.template.md  guardrails.template.md  progress.template.md  supervisor_manual.template.md
profile/: README.md
profile/qwen3-6-35b-a3b/: README.md  characteristics.json  context_estimate.json  context_stress.json
scripts/: install-git-hooks  verify-live  verify-web-rag
tests/: test_web_rag.py
