[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-gallery"
version = "0.1.0"
description = "Local ROCm-only llama.cpp workflow planner and verifier"
requires-python = ">=3.10"

[project.scripts]
llm-gallery = "llm_gallery.cli:main"

[tool.setuptools.packages.find]
include = ["llm_gallery*"]
